--- a/index.html
+++ b/index.html
@@ -27,16 +27,8 @@
     </header>
     <div id="animeGrid" class="anime-grid"></div>
 
-    <div id="videoModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <video id="animeVideo" controls>
-                <source id="videoSource" src="" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
-    </div>
+    
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
