--- a/haikyu!!_2nd_season.html
+++ b/haikyu!!_2nd_season.html
@@ -16,7 +16,7 @@
     <main>
         <div class="anime-box">
             <div class="anime-details">
-                <img src="/img/haik.jpg" alt="Haikyu!! 2nd Season" class="anime-image">
+                <img src="img/haik.jpg" alt="Haikyu!! 2nd Season" class="anime-image">
                 <div class="info">
                     <h2>Details</h2>
                     <p><strong>Status:</strong> Watching</p>
