--- a/jujutsu_kaisen_(tv).html
+++ b/jujutsu_kaisen_(tv).html
@@ -16,7 +16,7 @@
     <main>
         <div class="anime-box">
             <div class="anime-details">
-                <img src="/img/jjk1.jpg" alt="Jujutsu Kaisen" class="anime-image">
+                <img src="img/jjk1.jpg" alt="Jujutsu Kaisen" class="anime-image">
                 <div class="info">
                     <h2>Details</h2>
                     <p><strong>Status:</strong> Watched</p>
