--- a/Chainsaw_Man.html
+++ b/Chainsaw_Man.html
@@ -16,7 +16,7 @@
     <main>
         <div class="anime-box">
             <div class="anime-details">
-                <img src="/img/csm.jpg" alt="Chainsaw Man" class="anime-image">
+                <img src="img/csm.jpg" alt="Chainsaw Man" class="anime-image">
                 <div class="info">
                     <h2>Details</h2>
                     <p><strong>Status:</strong> Watched</p>
