--- a/jujutsu_kaisen_(tv)_2nd_season.html
+++ b/jujutsu_kaisen_(tv)_2nd_season.html
@@ -16,7 +16,7 @@
     <main>
         <div class="anime-box">
             <div class="anime-details">
-                <img src="/img/jjk2.jpg" alt="Jujutsu Kaisen Season 2" class="anime-image">
+                <img src="img/jjk2.jpg" alt="Jujutsu Kaisen Season 2" class="anime-image">
                 <div class="info">
                     <h2>Details</h2>
                     <p><strong>Status:</strong> Watching</p>
